# kzg-rln

./: Cargo.toml
kzg-test/: Cargo.toml
kzg-test/src/: main.rs
versionA/src/: main.rs
versionB/: Cargo.toml
versionB/src/: circuit.rs  kzg.rs  linalg.rs  main.rs
