[package]
name = "versionB"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-poly-commit = { git = "https://github.com/curryrasul/poly-commit" }
ark-ec = "0.3.0"
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
ark-poly = "0.3.0"
once_cell = "1.17.1"
ark-crypto-primitives = "0.3.0"
halo2_proofs = "0.3.0"
halo2_gadgets = "0.3.0"